feat: Enhance dashboard service with typed response and optimized calculations
- Introduced `DashboardResponse` DTO to provide a structured response for dashboard data.
- Updated `DashboardService` to utilize the new DTO, improving type safety and clarity.
- Refactored methods to reduce redundant database queries by fetching transactions and combined scores once.
- Added new repository methods for case-insensitive client name search and confirmed score retrieval.
- Improved weather forecast processing with better error handling and data extraction methods.
- Enhanced client matching logic to utilize a dedicated service for fuzzy matching.
- Implemented asynchronous bulk notification sending to prevent blocking servlet threads.
- Cleaned up exception handling in product grouping and invoice product deletion services.