@@ -1,5 +1,12 @@
 package com.hortifruti.sl.hortifruti.service.dashboard;
 
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.CategoryPercentage;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.CategoryRanking;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.SalesRevenue;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.TopProduct;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.TopProductByQuantity;
+import com.hortifruti.sl.hortifruti.dto.dashboard.DashboardResponse.Totals;
 import com.hortifruti.sl.hortifruti.model.finance.Category;
 import com.hortifruti.sl.hortifruti.model.finance.Transaction;
 import com.hortifruti.sl.hortifruti.model.finance.TransactionType;
@@ -25,39 +32,40 @@ public class DashboardService {
   private final CombinedScoreService combinedScoreService;
 
   @Transactional(readOnly = true)
-  public Map<String, Object> getDashboardData(
+  public DashboardResponse getDashboardData(
       LocalDate startDate, LocalDate endDate, Month month, int year) {
-    Map<String, Object> dashboardData = new HashMap<>();
+    // Buscados uma única vez e reaproveitados por todos os cálculos abaixo — antes, cada cálculo
+    // repetia a mesma query de Transaction/CombinedScore pro mesmo intervalo de datas.
+    List<Transaction> transactions =
+        transactionProcessingService.findTransactionsByDateRange(startDate, endDate);
+    List<CombinedScore> combinedScores =
+        combinedScoreService.findAllConfirmedBetween(startDate, endDate);
 
-    Map<String, BigDecimal> totals = new HashMap<>();
-    totals.put("TotalReceita", calculateTotalRevenue(startDate, endDate));
-    totals.put("TotalCusto", calculateTotalCost(startDate, endDate));
-    totals.put("MargemLucro", calculateProfitMarginPercentage(startDate, endDate));
-    dashboardData.put("Totais", totals);
+    BigDecimal totalRevenue = calculateTotalRevenue(transactions);
+    BigDecimal totalCost = calculateTotalCost(transactions);
 
-    Map<String, BigDecimal> salesRevenue = new HashMap<>();
-    salesRevenue.put("VendasCartao", calculateCardSalesRevenue(startDate, endDate));
-    salesRevenue.put("VendasPix", calculatePixSalesRevenue(startDate, endDate));
-    dashboardData.put("ReceitasPorTipo", salesRevenue);
+    Totals totais =
+        new Totals(
+            totalRevenue, totalCost, calculateProfitMarginPercentage(totalRevenue, totalCost));
 
-    dashboardData.put("FluxoDeCaixa", getCashFlowData(startDate, endDate));
+    SalesRevenue receitasPorTipo =
+        new SalesRevenue(
+            calculateCardSalesRevenue(transactions), calculatePixSalesRevenue(transactions));
 
-    dashboardData.put("PorcentagemPorCategoria", getCategoryPercentageData(startDate, endDate));
-
-    dashboardData.put("RankingCategoriasGastos", getExpenseCategoryRanking(month, year));
-
-    dashboardData.put("Fluxo de Vendas", getCombinedScoreData(startDate, endDate));
-
-    dashboardData.put("Produtos em Alta", getTopSellingProducts(startDate, endDate));
-
-    dashboardData.put("Top10ProdutosPorQuantidade", getTopProductsByQuantity(startDate, endDate));
-
-    return dashboardData;
+    return new DashboardResponse(
+        totais,
+        receitasPorTipo,
+        getCashFlowData(transactions),
+        getCategoryPercentageData(transactions),
+        getExpenseCategoryRanking(month, year),
+        getCombinedScoreData(combinedScores),
+        getTopSellingProducts(combinedScores),
+        getTopProductsByQuantity(combinedScores));
   }
 
   private BigDecimal calculateTotalByFilter(
-      LocalDate startDate, LocalDate endDate, TransactionType type, Category category) {
-    return transactionProcessingService.findTransactionsByDateRange(startDate, endDate).stream()
+      List<Transaction> transactions, TransactionType type, Category category) {
+    return transactions.stream()
         .filter(
             transaction ->
                 (type == null || transaction.getTransactionType() == type)
@@ -73,26 +81,24 @@ public class DashboardService {
         .reduce(BigDecimal.ZERO, BigDecimal::add);
   }
 
-  private BigDecimal calculateTotalRevenue(LocalDate startDate, LocalDate endDate) {
-    return calculateTotalByFilter(startDate, endDate, TransactionType.CREDITO, null);
+  private BigDecimal calculateTotalRevenue(List<Transaction> transactions) {
+    return calculateTotalByFilter(transactions, TransactionType.CREDITO, null);
   }
 
-  private BigDecimal calculateTotalCost(LocalDate startDate, LocalDate endDate) {
-    return calculateTotalByFilter(startDate, endDate, TransactionType.DEBITO, null);
+  private BigDecimal calculateTotalCost(List<Transaction> transactions) {
+    return calculateTotalByFilter(transactions, TransactionType.DEBITO, null);
   }
 
-  private BigDecimal calculateCardSalesRevenue(LocalDate startDate, LocalDate endDate) {
-    return calculateTotalByFilter(startDate, endDate, null, Category.VENDAS_CARTAO);
+  private BigDecimal calculateCardSalesRevenue(List<Transaction> transactions) {
+    return calculateTotalByFilter(transactions, null, Category.VENDAS_CARTAO);
   }
 
-  private BigDecimal calculatePixSalesRevenue(LocalDate startDate, LocalDate endDate) {
-    return calculateTotalByFilter(startDate, endDate, null, Category.VENDAS_PIX);
+  private BigDecimal calculatePixSalesRevenue(List<Transaction> transactions) {
+    return calculateTotalByFilter(transactions, null, Category.VENDAS_PIX);
   }
 
-  private BigDecimal calculateProfitMarginPercentage(LocalDate startDate, LocalDate endDate) {
-    BigDecimal totalRevenue = calculateTotalRevenue(startDate, endDate);
-    BigDecimal totalCost = calculateTotalCost(startDate, endDate);
-
+  private BigDecimal calculateProfitMarginPercentage(
+      BigDecimal totalRevenue, BigDecimal totalCost) {
     if (totalRevenue.compareTo(BigDecimal.ZERO) == 0) {
       return BigDecimal.ZERO;
     }
@@ -104,11 +110,7 @@ public class DashboardService {
     return part.divide(total, 4, java.math.RoundingMode.HALF_UP).multiply(BigDecimal.valueOf(100));
   }
 
-  private Map<Month, Map<String, BigDecimal>> getCashFlowData(
-      LocalDate startDate, LocalDate endDate) {
-    List<Transaction> transactions =
-        transactionProcessingService.findTransactionsByDateRange(startDate, endDate);
-
+  private Map<Month, Map<String, BigDecimal>> getCashFlowData(List<Transaction> transactions) {
     return transactions.stream()
         .collect(
             Collectors.groupingBy(
@@ -122,11 +124,8 @@ public class DashboardService {
                         BigDecimal.ZERO, Transaction::getAmount, BigDecimal::add))));
   }
 
-  private Map<Category, Map<String, BigDecimal>> getCategoryPercentageData(
-      LocalDate startDate, LocalDate endDate) {
-    List<Transaction> transactions =
-        transactionProcessingService.findTransactionsByDateRange(startDate, endDate);
-
+  private Map<Category, CategoryPercentage> getCategoryPercentageData(
+      List<Transaction> transactions) {
     Map<Category, BigDecimal> categoryTotals =
         transactions.stream()
             .collect(
@@ -145,16 +144,12 @@ public class DashboardService {
         .collect(
             Collectors.toMap(
                 Map.Entry::getKey,
-                entry -> {
-                  BigDecimal percentage = calculatePercentage(entry.getValue(), totalAmount);
-                  Map<String, BigDecimal> data = new HashMap<>();
-                  data.put("Porcentagem", percentage);
-                  data.put("Valor", entry.getValue());
-                  return data;
-                }));
+                entry ->
+                    new CategoryPercentage(
+                        calculatePercentage(entry.getValue(), totalAmount), entry.getValue())));
   }
 
-  private List<Map<String, Object>> getExpenseCategoryRanking(Month month, int year) {
+  private List<CategoryRanking> getExpenseCategoryRanking(Month month, int year) {
     LocalDate startDate = LocalDate.of(year, month, 1);
     LocalDate endDate = startDate.withDayOfMonth(startDate.lengthOfMonth());
 
@@ -182,20 +177,15 @@ public class DashboardService {
         categoryCosts.entrySet().stream()
             .collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().abs()));
 
-    List<Map<String, Object>> ranking =
+    List<Map.Entry<Category, BigDecimal>> sorted =
         absoluteCategoryCosts.entrySet().stream()
             .sorted(Map.Entry.<Category, BigDecimal>comparingByValue().reversed())
-            .map(
-                entry -> {
-                  Map<String, Object> rankData = new HashMap<>();
-                  rankData.put("Categoria", entry.getKey().name());
-                  rankData.put("Valor", entry.getValue());
-                  return rankData;
-                })
-            .collect(Collectors.toList());
+            .toList();
 
-    for (int i = 0; i < ranking.size(); i++) {
-      ranking.get(i).put("Rank", i + 1);
+    List<CategoryRanking> ranking = new ArrayList<>();
+    for (int i = 0; i < sorted.size(); i++) {
+      Map.Entry<Category, BigDecimal> entry = sorted.get(i);
+      ranking.add(new CategoryRanking(entry.getKey().name(), entry.getValue(), i + 1));
     }
 
     return ranking;
@@ -205,12 +195,7 @@ public class DashboardService {
    * Retorna o fluxo de vendas agrupado por semana. Utiliza a data de CONFIRMAÇÃO (confirmedAt) ao
    * invés de vencimento (dueDate).
    */
-  public Map<String, Object> getCombinedScoreData(LocalDate startDate, LocalDate endDate) {
-    Map<String, Object> combinedScoreData = new HashMap<>();
-
-    List<CombinedScore> combinedScores =
-        combinedScoreService.findAllConfirmedBetween(startDate, endDate);
-
+  private Map<String, BigDecimal> getCombinedScoreData(List<CombinedScore> combinedScores) {
     Map<Integer, BigDecimal> weeklyScores =
         combinedScores.stream()
             .collect(
@@ -219,60 +204,49 @@ public class DashboardService {
                     Collectors.reducing(
                         BigDecimal.ZERO, CombinedScore::getTotalValue, BigDecimal::add)));
 
-    weeklyScores.forEach(
-        (week, totalScore) -> {
-          combinedScoreData.put("Semana " + week, totalScore);
-        });
-
+    Map<String, BigDecimal> combinedScoreData = new HashMap<>();
+    weeklyScores.forEach((week, totalScore) -> combinedScoreData.put("Semana " + week, totalScore));
     return combinedScoreData;
+  }
+
+  private List<GroupedProduct> flattenGroupedProducts(List<CombinedScore> combinedScores) {
+    return combinedScores.stream()
+        .flatMap(cs -> cs.getGroupedProducts().stream())
+        .collect(Collectors.toList());
   }
 
   /**
    * Retorna os top 10 produtos em alta (ordenados por quantidade e valor). Utiliza a data de
    * CONFIRMAÇÃO (confirmedAt) ao invés de vencimento (dueDate).
    */
-  public List<Map<String, Object>> getTopSellingProducts(LocalDate startDate, LocalDate endDate) {
-    List<CombinedScore> combinedScores =
-        combinedScoreService.findAllConfirmedBetween(startDate, endDate);
+  private List<TopProduct> getTopSellingProducts(List<CombinedScore> combinedScores) {
+    List<GroupedProduct> groupedProducts = flattenGroupedProducts(combinedScores);
 
-    List<GroupedProduct> groupedProducts =
-        combinedScores.stream()
-            .flatMap(cs -> cs.getGroupedProducts().stream())
-            .collect(Collectors.toList());
-
-    Map<String, Map<String, Object>> productData =
+    Map<String, TopProduct> productData =
         groupedProducts.stream()
             .collect(
                 Collectors.groupingBy(
                     GroupedProduct::getCode,
                     Collectors.collectingAndThen(
                         Collectors.toList(),
-                        products -> {
-                          Map<String, Object> data = new HashMap<>();
-                          data.put("Nome", products.get(0).getName());
-                          data.put(
-                              "QuantidadeTotal",
-                              products.stream()
-                                  .map(GroupedProduct::getQuantity)
-                                  .reduce(BigDecimal.ZERO, BigDecimal::add));
-                          data.put(
-                              "ValorTotal",
-                              products.stream()
-                                  .map(GroupedProduct::getTotalValue)
-                                  .reduce(BigDecimal.ZERO, BigDecimal::add));
-                          return data;
-                        })));
+                        products ->
+                            new TopProduct(
+                                products.get(0).getName(),
+                                products.stream()
+                                    .map(GroupedProduct::getQuantity)
+                                    .reduce(BigDecimal.ZERO, BigDecimal::add),
+                                products.stream()
+                                    .map(GroupedProduct::getTotalValue)
+                                    .reduce(BigDecimal.ZERO, BigDecimal::add)))));
 
-    List<Map<String, Object>> ranking = new ArrayList<>(productData.values());
+    List<TopProduct> ranking = new ArrayList<>(productData.values());
     ranking.sort(
         (p1, p2) -> {
-          int quantityComparison =
-              ((BigDecimal) p2.get("QuantidadeTotal"))
-                  .compareTo((BigDecimal) p1.get("QuantidadeTotal"));
+          int quantityComparison = p2.quantidadeTotal().compareTo(p1.quantidadeTotal());
           if (quantityComparison != 0) {
             return quantityComparison;
           }
-          return ((BigDecimal) p2.get("ValorTotal")).compareTo((BigDecimal) p1.get("ValorTotal"));
+          return p2.valorTotal().compareTo(p1.valorTotal());
         });
 
     return ranking.stream().limit(10).collect(Collectors.toList());
@@ -282,39 +256,25 @@ public class DashboardService {
    * Retorna os top 10 produtos com mais saída de quantidade em um período. Utiliza a data de
    * CONFIRMAÇÃO (confirmedAt) ao invés de vencimento (dueDate).
    */
-  public List<Map<String, Object>> getTopProductsByQuantity(
-      LocalDate startDate, LocalDate endDate) {
-    List<CombinedScore> combinedScores =
-        combinedScoreService.findAllConfirmedBetween(startDate, endDate);
+  private List<TopProductByQuantity> getTopProductsByQuantity(List<CombinedScore> combinedScores) {
+    List<GroupedProduct> groupedProducts = flattenGroupedProducts(combinedScores);
 
-    List<GroupedProduct> groupedProducts =
-        combinedScores.stream()
-            .flatMap(cs -> cs.getGroupedProducts().stream())
-            .collect(Collectors.toList());
-
-    Map<String, Map<String, Object>> productData =
+    Map<String, TopProductByQuantity> productData =
         groupedProducts.stream()
             .collect(
                 Collectors.groupingBy(
                     GroupedProduct::getCode,
                     Collectors.collectingAndThen(
                         Collectors.toList(),
-                        products -> {
-                          Map<String, Object> data = new HashMap<>();
-                          data.put("Nome", products.get(0).getName());
-                          data.put(
-                              "QuantidadeTotal",
-                              products.stream()
-                                  .map(GroupedProduct::getQuantity)
-                                  .reduce(BigDecimal.ZERO, BigDecimal::add));
-                          return data;
-                        })));
+                        products ->
+                            new TopProductByQuantity(
+                                products.get(0).getName(),
+                                products.stream()
+                                    .map(GroupedProduct::getQuantity)
+                                    .reduce(BigDecimal.ZERO, BigDecimal::add)))));
 
-    List<Map<String, Object>> ranking = new ArrayList<>(productData.values());
-    ranking.sort(
-        (p1, p2) ->
-            ((BigDecimal) p2.get("QuantidadeTotal"))
-                .compareTo((BigDecimal) p1.get("QuantidadeTotal")));
+    List<TopProductByQuantity> ranking = new ArrayList<>(productData.values());
+    ranking.sort((p1, p2) -> p2.quantidadeTotal().compareTo(p1.quantidadeTotal()));
 
     return ranking.stream().limit(10).collect(Collectors.toList());
   }
